# kattis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/kattis/: 13floors.py  3puzzle.py  4thought.py  aaah.py  abcproblem.py  areal.py  ataleoftwoqueues.py  atmmaintenance.py  different.py  floors13.py  puzzle.py  thought4.py  towering.py
tests/: test_3puzzle.py  test_aaah.py  test_abcproblem.py  test_areal.py  test_ataleoftwoqueues.py  test_atmmaintenance.py  test_different.py  test_floors13.py  test_thought4.py  test_towering.py
