[tool.poetry]
packages = [{include = "kattis", from = "src"}]
name = "kattis"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmad Ramadan",email = "ahmad.ramadan2005f@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
License="MIT"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
