[tool.poetry]
name = "kattis"
version = "0.1.0"
description = "Pythonified Kattis solutions using Poetry"
authors = ["Ahmad Ramadan <ahmad.ramadan2005f@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "kattis", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.10.7,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)",
    "black (>=25.11.0,<26.0.0)"
]
